# svgtopdf

./: CMakeLists.txt  readme.md  svgtopdf.sln
cmake/: FindHaru.cmake
svgtopdf/: DrawSvg.cpp  DrawSvg.h  ReadMe.txt  SvgConverter.cpp  SvgConverter.h  main.cpp  nanosvg.cpp  stdafx.cpp  stdafx.h  svgtopdf.vcxproj  svgtopdf.vcxproj.filters
svgtopdf/libharu/: hpdf_config.h
